--- a/index.html
+++ b/index.html
@@ -34,5 +34,54 @@
         </div>
       </article>
     </header>
+    <main>
+      <section class="information">
+        <h3>Some random information.</h3>
+        <div class="box-container">
+          <div class="box">
+            <a href="#"
+              ><img
+                src="https://static.vecteezy.com/system/resources/previews/001/209/957/original/square-png.png"
+                alt=""
+            /></a>
+            <p>this is some subtext under an illustration or image</p>
+          </div>
+          <div class="box">
+            <a href="#"
+              ><img
+                src="https://static.vecteezy.com/system/resources/previews/001/209/957/original/square-png.png"
+                alt=""
+            /></a>
+            <p>this is some subtext under an illustration or image</p>
+          </div>
+          <div class="box">
+            <a href="#"
+              ><img
+                src="https://static.vecteezy.com/system/resources/previews/001/209/957/original/square-png.png"
+                alt=""
+            /></a>
+            <p>this is some subtext under an illustration or image</p>
+          </div>
+          <div class="box">
+            <a href="#"
+              ><img
+                src="https://static.vecteezy.com/system/resources/previews/001/209/957/original/square-png.png"
+                alt=""
+            /></a>
+            <p>this is some subtext under an illustration or image</p>
+          </div>
+        </div>
+      </section>
+      <section class="quote">
+        <blockquote>
+          <p>
+            This is an inspiring quote, or a testimonial from a customer. Maybe
+            it's just filling up space, or maybe people will actually read it.
+            Who knows? All I know is that it looks just fine.
+          </p>
+          <figcaption>—Thor, God of Thunder</figcaption>
+        </blockquote>
+      </section>
+    </main>
   </body>
 </html>
