--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;400;800&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Odin Foundation Landing Page</title>
   </head>
@@ -19,12 +25,12 @@
       </nav>
       <article>
         <div>
-          <h1>This website is awesome</h1>
-          <p>
+          <h1 class="header--title">This website is awesome</h1>
+          <p class="header--text">
             This website has some subtext that goes here under the main title.
             It's a smaller font and color is lower contrast.
           </p>
-          <button>Sign Up</button>
+          <button>Sign up</button>
         </div>
         <div>
           <img
@@ -37,7 +43,7 @@
     </header>
     <main>
       <section class="information">
-        <h3>Some random information.</h3>
+        <h3 class="information--title">Some random information.</h3>
         <div class="box-container">
           <div class="box">
             <a href="#"
@@ -75,7 +81,7 @@
       </section>
       <section class="quote">
         <blockquote>
-          <em>
+          <em class="text">
             This is an inspiring quote, or a testimonial from a customer. Maybe
             it's just filling up space, or maybe people will actually read it.
             Who knows? All I know is that it looks just fine.
@@ -83,6 +89,18 @@
           <figcaption class="quote-author">—Thor, God of Thunder</figcaption>
         </blockquote>
       </section>
+      <section class="calltoaction">
+        <div class="container">
+          <div class="container--divider">
+            <h3>Call to action! It's time!</h3>
+            <p>
+              Sign up for our product by clicking that button right over there!
+            </p>
+          </div>
+          <button class="calltoaction--btn">Sign up</button>
+        </div>
+      </section>
+      <footer><p>Copyright © The Odin Project 2023</p></footer>
     </main>
   </body>
 </html>
